apps/knowii/src/styles.css
/*
 * Wrap Tailwind's base and utilities in separate layers
 * Reference: https://primereact.org/tailwind/#csslayer
 */
@layer tailwind-base, primereact, tailwind-utilities;

@import 'primereact/resources/themes/lara-light-pink/theme.css' layer(primereact);

@layer tailwind-base {
  @tailwind base;
}

@layer tailwind-utilities {
  @tailwind components;
  @tailwind utilities;
}

/* Reference: https://alpinejs.dev/directives/cloak */
[x-cloak] {
  display: none;
}

/**
  * App styles
 */
html {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* no blue flashes */
}

html,
body {
  @apply antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
}

html,
body,
body > div:first-child {
  @apply h-dvh w-dvw antialiased m-0 p-0 text-base font-normal font-app bg-gray-50;
  -webkit-text-size-adjust: 100%;
  letter-spacing: -0.1px;
  /* Standard line height */
  /* Reference for line-height: https://dev.to/lampewebdev/css-line-height-jjp */
  line-height: 1.5;
  tab-size: 4;
  scroll-behavior: smooth;
}

body {
  font-family: inherit;
  line-height: inherit;
}

svg {
  display: block;
  vertical-align: middle;
  shape-rendering: auto;
  text-rendering: optimizeLegibility;
}

h1 {
  @apply font-bold text-4xl md:text-5xl lg:text-6xl leading-none tracking-tight;
}

h2 {
  @apply font-semibold text-xl md:text-2xl;
}

.full-page {
  @apply h-full min-h-full w-full min-w-full;
}

.simple-link {
  @apply underline text-sm text-gray-600 hover:text-primary-500;
}

.menu-content-wrapper {
  @apply flex flex-col gap-4 h-full;
}

.main-menu-entry > * {
  @apply flex flex-row gap-4 justify-center text-2xl py-2 rounded-md leading-none text-white bg-primary-500 hover:bg-primary-600 hover:cursor-pointer;
}

.user-menu-entry {
  @apply hover:cursor-pointer flex flex-row p-4 rounded-md bg-gray-50 hover:outline hover:outline-primary-600;
}

.page-wrapper {
  @apply bg-gray-50 full-page;
}

.page-content-wrapper {
  @apply sm:mx-4 md:mx-8 lg:mx-16 xl:mx-24 mt-4 p-4 min-h-[48rem] rounded-b-md;
}

